# mission-control-v2

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
config/: config.example.yaml  config.yaml
marked-for-deletion/__tasker/: pp_create-filebased-taskmgmt-knowledgebase-RAG.md
openclaw-backup/: .gitignore  README.md
openclaw-backup/docs/: autonomous-execution-requirements.md  port-assignments.txt
openclaw-backup/docs/conversation-topics/: ai-agent-steering-and-autonomous-execution.md
openclaw-backup/minio/: docker-compose.yml
openclaw-deployment-plans/: DECISION_GUIDE.md
openclaw-deployment-plans/option-a-start-now/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
openclaw-deployment-plans/option-b-review-first/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
openclaw-deployment-plans/option-c-simplified/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
openclaw-docker/: CRITICAL_SECURITY_FINDINGS.md  README.md  deploy-openclaw.sh  docker-compose.yml  openclaw-orbstack-container.code-workspace  verify.sh
openclaw-knowledgebase/: README.md
scripts/: clone-staging.sh  mount-shared.sh
src/mission_control/: __init__.py  cli.py  health_checker.py  manager.py  models.py  proxmox_client.py  ssh_client.py
tests/: conftest.py  test_manager.py  test_models.py
